welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var x:Int=0
^Poucet:4: error: ')' expected but ';' found.
		do(x=x+1) while(estSurBiscuit();)
                                               ^Poucet:4: error: illegal start of statement
		do(x=x+1) while(estSurBiscuit();)
                                                ^Poucet:5: error: illegal start of statement
		if (croisement();) { if (x<=2 {droite}; if (x=>3) {gauche();}
                                 ^Poucet:10: error: 'while' expected but '}' found.
}
^